[gd_scene load_steps=5 format=3 uid="uid://cw5nra5ysip68"]

[ext_resource type="Script" path="res://scenes/shop/shop_item_card.gd" id="1_i6e04"]
[ext_resource type="Theme" uid="uid://dgotkhuyeu2af" path="res://assets/theme.tres" id="1_v2w22"]
[ext_resource type="AudioStream" uid="uid://cm1415id1ykvo" path="res://assets/sounds/sfx/succes_sound.wav" id="3_34bhy"]
[ext_resource type="AudioStream" uid="uid://chpfi3iku5s6c" path="res://assets/sounds/sfx/error_sound.wav" id="4_ilgnn"]

[node name="ShopItemCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6e04")

[node name="success_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_34bhy")

[node name="error_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ilgnn")

[node name="Button" type="Button" parent="."]
layout_mode = 1
offset_left = 2.0
offset_top = 9.0
offset_right = 132.0
offset_bottom = 179.0
theme = ExtResource("1_v2w22")

[node name="item_name_label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.0
offset_top = 4.0
offset_right = 61.0
offset_bottom = 12.0
grow_horizontal = 2
text = "Item name"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -69.0
offset_right = 31.5
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[node name="item_description_label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -67.0
offset_right = 70.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
text = "This is the current item description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="item_price_label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -21.0
offset_right = 59.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
text = "150 coins"
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_buy_button_pressed"]
